add salam for test

--- a/index20.html
+++ b/index20.html
@@ -141,6 +141,7 @@
     <title>فرم ثبت نام</title>
 </head>
 <body>
+    salam
     <div class="jumbotron text-center">
         <h1>فرم عضویت</h1>
     </div>
