--- a/index21.html
+++ b/index21.html
@@ -126,20 +126,32 @@
                 setTimeout(fnlSubmit, 1000);
             }
         }
+    
         function fnlSubmit() {
             document.getElementById('overlay-box').classList.remove('active');
-            document.getElementById("card-firstName").innerHTML= document.getElementById("firstName").value
-            document.getElementById("card-lastName").innerHTML= document.getElementById("lastName").value
-            document.getElementById("card-email").innerHTML= document.getElementById("email").value
-            document.getElementById("firstName").value="";
-            document.getElementById("lastName").value="";
-            document.getElementById("email").value="";
-            document.getElementById("pwd").value="";
-            document.getElementById("con-pwd").value="";
+            /*document.getElementById("card-firstName").innerHTML = document.getElementById("firstName").value
+            document.getElementById("card-lastName").innerHTML = document.getElementById("lastName").value
+            document.getElementById("card-email").innerHTML = document.getElementById("email").value*/
+            let count = document.getElementById("count-tbl").rows.length;
+            document.getElementById("info-tbl").innerHTML = document.getElementById("info-tbl").innerHTML + "<td>" + count + "</td>"+"<td>" + document.getElementById("firstName").value + "</td>"+"<td>" + document.getElementById("lastName").value + "</td>"+"<td>" + document.getElementById("email").value + "</td>"+"<td><input type=\"button\" value=\"حذف\" onclick=\"deleteRow(this)\" class=\"btn btn-danger\"></td>" + "</tr>";
+            document.getElementById("firstName").value = "";
+            document.getElementById("lastName").value = "";
+            document.getElementById("email").value = "";
+            document.getElementById("pwd").value = "";
+            document.getElementById("con-pwd").value = "";
+        }
+        function deleteRow(element) {
+            //element.parentNode = td
+            //element.parentNode.parentNode = tr
+            var i = element.parentNode.parentNode.rowIndex;
+            document.getElementById("count-tbl").deleteRow(i);
+
+            //let i = document.getElementById().deleteRow(i);
         }
     </script>
     <title>فرم ثبت نام</title>
 </head>
+
 <body>
     <div class="jumbotron text-center">
         <h1>فرم عضویت</h1>
@@ -154,7 +166,8 @@
                 <h3>تکمیل اطلاعات</h3>
                 <div>
                     <label for="text">:نام</label>
-                    <input type="text" class="form-control txt-rules" id="firstName" placeholder="نام را وارد نمایید"name="firstName">
+                    <input type="text" class="form-control txt-rules" id="firstName" placeholder="نام را وارد نمایید"
+                        name="firstName">
                     <div id="txtFirstName_error" class="error-text"></div>
                 </div>
                 <div>
@@ -175,7 +188,8 @@
                     </div> -->
                     <label for="pwd">:رمز عبور</label>
                     <input type="password" class="form-control txt-rules password-prpover" id="pwd"
-                        placeholder="رمز عبور خود را درج نمایید" name="pwd" title="کاراکترهای مجاز" data-content="پسورد شامل کاراکترهای : حروف بزرگ حروف کوچک عدد باشد و حداقل 8 کاراکتر باشد">
+                        placeholder="رمز عبور خود را درج نمایید" name="pwd" title="کاراکترهای مجاز"
+                        data-content="پسورد شامل کاراکترهای : حروف بزرگ حروف کوچک عدد باشد و حداقل 8 کاراکتر باشد">
                     <div id="txtPwd_error" class="error-text"></div>
                 </div>
                 <div class="pwd-fld-container">
@@ -184,7 +198,8 @@
                     </div> -->
                     <label for="pwd">:تکرار مرز عبور</label>
                     <input type="password" class="form-control txt-rules conpassword-prpover" id="con-pwd"
-                        placeholder="تکرار رمز عبور خود را درج نمایید" name="con-pwd" title="کاراکترهای مجاز" data-content="پسورد شامل کاراکترهای : حروف بزرگ حروف کوچک عدد باشد و حداقل 8 کاراکتر باشد">
+                        placeholder="تکرار رمز عبور خود را درج نمایید" name="con-pwd" title="کاراکترهای مجاز"
+                        data-content="پسورد شامل کاراکترهای : حروف بزرگ حروف کوچک عدد باشد و حداقل 8 کاراکتر باشد">
                     <div id="txtCon-pwd_error" class="error-text"></div>
                 </div>
                 <div class="checkbox remember-box">
@@ -196,23 +211,37 @@
             </div>
             <div class="col-sm-6 rules">
                 <div class="card">
-                    <div class="card-header icon-avatar">نمایش اطلاعات
+                    <div class="card-header icon-avatar"> نمایش اطلاعات کاربران
                         <img style="border-radius: 50%;" src="images/avatar.jpg" />
                     </div>
-                    <div class="card-body">
-                        <div>
-                            <label for="text">نام <span id="card-firstName"></span></label>
-                        </div>
-                        </br>
-                        <div>
-                            <label for="text">نام خانوادگی <span id="card-lastName"></span></label>
-                        </div>
-                        </br>
-                        <div>
-                            <label for="email">نام کاربری <span id="card-email"></span></label>
-                        </div>
-                    </div>
-
+                    <table class="table table-striped info-table" id="count-tbl">
+                        <thead>
+                            <tr>
+                                <th>ردیف</th>
+                                <th>نام</th>
+                                <th>نام خانوادگی</th>
+                                <th>نام کاربری</th>
+                            </tr>
+                        </thead>
+                        <tbody id="info-tbl">
+                            <tr>
+                                <td>1</td>
+                                <td>سارا</td>
+                                <td>جهان مرد</td>
+                                <td>ثارای</td>
+                                <td><input type="button" value="حذف" onclick="deleteRow(this)" class="btn btn-danger">
+                                </td>
+                            </tr>
+                            <tr>
+                                <td>2</td>
+                                <td>مهرزاد</td>
+                                <td>تجاره</td>
+                                <td>مهرزادی</td>
+                                <td><input type="button" value="حذف" onclick="deleteRow(this)" class="btn btn-danger">
+                                </td>
+                            </tr>
+                        </tbody>
+                    </table>
                 </div>
 
             </div>
